--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                     </p>
                 </div>
                 <div class="col-sm offset-sm-2 offset-md-3">
-                    <button class="btn btn-lg my-font btn-light rounded wow fadeInRight"  data-duration-in=".3" data-wow-delay="0.9s">Pedír información.</button>
+                    <button class="btn btn-lg my-font btn-light rounded wow fadeInRight" onclick="location.href='https://wa.me/527712027537'"  data-duration-in=".3" data-wow-delay="0.9s">Pedir información.</button>
                 </div>
             </div> <!-- end of row -->
         </div> <!-- end of container -->
