--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
 <!--load WOW js from CDN-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 <!-- End animation -->
-<!-- Slick slider -->
 
-<!-- Slick slider -->
 
 <style>
     .slider {
-  max-width: 1000px;
+  width: 100%;
   margin: 0 auto;
 }
 .slick-slide {
@@ -661,7 +659,7 @@ button.slick-prev:hover {
                             <img src="assets/imgs/avatar3.jpg" class="testimonial-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">                        
                         </div>
                         <div class="testimonial-card-body">
-                            <p class="testimonial-card-subtitle">Me gusta mucho la atención que he tenido con psicoterapeutaalanlandaverde, considero que es muy sincero al escucharte gracias a el me he podido conectar conmigo misma.</p>
+                            <p class="testimonial-card-subtitle">Me gusta mucho la atención que he tenido con alan he podido mejorar mi autoestima.</p>
                             <h6 class="testimonial-card-title">Rebeca García</h6>
                         </div>
                     </div>
