--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ button.slick-prev:hover {
             <!-- about wrapper -->
             <div class="about">
                 <div class="about-img-holder">
-                    <img src="assets/imgs/man.png" class="about-img" alt="Alan Landaverde" style="margin-top:20px;">
+                    <img src="assets/imgs/about.jpg" class="about-img" alt="Alan Landaverde" style="margin-top:20px;">
                 </div>
                 <div class="about-caption"> 
                     <p class="section-subtitle wow fadeInLeft"  data-duration-in=".3" data-wow-delay="0.6s" style="color:#fff !important;">¿Quién Soy?</p>
