--- a/index.html
+++ b/index.html
@@ -462,6 +462,11 @@ button.slick-prev:hover {
                             <img src="assets/imgs/team-1.jpg" alt="" class="">
                             <h6 class="title wow fadeInUp"  data-duration-in=".3" data-wow-delay="0.3s">Psicoterapia Individual</h6>
                             <p class="custom-text wow fadeInUp"  data-duration-in=".3" data-wow-delay="0.3s">Psicoterapia existencial fenomenologica</p>
+                            <button data-toggle="collapse" data-target="#service-1">Más información</button>
+
+<div id="service-1" class="collapse">
+<span style="font-size:20px; color: #695aa6;">Hola</span>
+</div>
                         </div>
                     </div>
                 </div>
@@ -471,6 +476,11 @@ button.slick-prev:hover {
                             <img src="assets/imgs/team-2.jpg" alt="" class="">
                             <h6 class="title wow fadeInUp"  data-duration-in=".3" data-wow-delay="0.5s">Terapia de pareja</h6>
                             <p class="custom-text wow fadeInUp"  data-duration-in=".3" data-wow-delay="0.5s">Enfocada a relaciones con problemas</p>
+                            <button data-toggle="collapse" data-target="#service-2">Más información</button>
+
+                            <div id="service-2" class="collapse">
+                            <span style="font-size:20px; color: #695aa6;">Hola</span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -480,7 +490,12 @@ button.slick-prev:hover {
                             <img src="assets/imgs/team-3.jpg" alt="" class="">
                             <h6 class="title wow fadeInUp"  data-duration-in=".3" data-wow-delay="0.7s">Terapia Neuropsicológia</h6>
                             <p class="custom-text wow fadeInUp"  data-duration-in=".3" data-wow-delay="0.7s">Valoración, intervencion y rehabilitación neuropsicológia en niños y adolecentes</p>
-                        </div>
+                            <button data-toggle="collapse" data-target="#service-3">Más información</button>
+
+                            <div id="service-3" class="collapse">
+                            <span style="font-size:20px; color: #695aa6;">Hola</span>
+                            </div>
+                          </div>
                     </div>
                 </div>
                 <!--<div class="col-md-6 col-lg-3">
@@ -497,11 +512,11 @@ button.slick-prev:hover {
     </section><!-- end of service section -->
 
     <!-- portfolio section -->
-    <section class="section" id="services">
+    <!--<section class="section" id="services">
         <div class="container text-center">
             <p class="section-subtitle wow fadeInLeft"  data-duration-in=".3" data-wow-delay="0.3s">¿Por Qué Tomar Terapia Con Nosotros?</p>
             <h6 class="section-title mb-6 wow fadeInRight"  data-duration-in=".3" data-wow-delay="0.6s">Nuestros Beneficios</h6>
-            <!-- row -->
+          
             <div class="row">
                 <div class="col-md-4">
                     <a href="#" class="portfolio-card">
@@ -536,9 +551,9 @@ button.slick-prev:hover {
                         </span>                     
                     </a>
                 </div>
-            </div><!-- end of row -->
-        </div><!-- end of container -->
-    </section> <!-- end of portfolio section -->
+            </div>
+        </div>
+    </section>-->
 
     <!-- pricing section -->
     <!--<section class="section" id="pricing">
@@ -616,10 +631,11 @@ button.slick-prev:hover {
     </section>-->
 
     <!-- section -->
+    <!--
     <section class="section-sm bg-primary">
-        <!-- container -->
+
         <div class="container text-center text-sm-left">
-            <!-- row -->
+
             <div class="row align-items-center">
                 <div class="col-sm offset-md-1 mb-4 mb-md-0">
                     <h6 class="title text-light wow fadeInLeft"  data-duration-in=".3" data-wow-delay="0.3s">¿Qúe es la neuropsicológica?</h6>
@@ -630,9 +646,9 @@ button.slick-prev:hover {
                 <div class="col-sm offset-sm-2 offset-md-3">
                     <button class="btn btn-lg my-font btn-light rounded wow fadeInRight" onclick="location.href='https://wa.me/527712027537'"  data-duration-in=".3" data-wow-delay="0.9s">Pedir información.</button>
                 </div>
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </section> <!-- end of section -->
+            </div> 
+        </div> 
+    </section> -->
 
     <!-- testimonial section -->
     <section class="section" id="testmonial">
