--- a/blog-1.html
+++ b/blog-1.html
@@ -374,22 +374,22 @@ button.slick-prev:hover {
             <a class="logo" href="#"><img src="assets/imgs/logo.png" style="max-width: 200px;"></a>         
             <ul class="nav">
                 <li class="item">
-                    <a class="link" href="#home">Inicio</a>
+                    <a class="link" href="index.html#home">Inicio</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#about">Nosotros</a>
+                    <a class="link" href="index.html#about">Nosotros</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#services">Servicios</a>
+                    <a class="link" href="index.html#services">Servicios</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#testmonial">Testimonios</a>
+                    <a class="link" href="index.html#testmonial">Testimonios</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#blog">Blog</a>
+                    <a class="link" href="index.html#blog">Blog</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#contact">Contacto</a>
+                    <a class="link" href="index.html#contact">Contacto</a>
                 </li>
                <!-- <li class="item ml-md-3">
                     <a href="components.html" class="btn btn-primary">Components</a>
