--- a/index.html
+++ b/index.html
@@ -427,14 +427,35 @@ button.slick-prev:hover {
                 <div class="about-caption"> 
                     <p class="section-subtitle wow fadeInLeft"  data-duration-in=".3" data-wow-delay="0.6s" style="color:#fff !important;">¿Quién Soy?</p>
                     <h2 class="section-title mb-3 wow fadeInUp"  data-duration-in=".3" data-wow-delay="0.3s">Alan Acastañeda Psicológo.</h2>
-                    <p class="wow fadeInRight"  data-duration-in=".3" data-wow-delay="0.3s" style="color:#fff;">
-                        Master en neuropsicológia, en psicoterapia de pareja humanista 
-                        <br>  
-                    El enfoque desde el que trabajo esta diseñado para la comprension de los asuntos humanos desde un punto de vista filosofico y estetico, significa que el modelo esta más
-                    diseñado en la comprension de lo que la persona vive, aprendiendo a cuestionarnos de manera colaborativa o utilizando un lenguaje no correctivo para acercarnos, a dicho
-                    objetivo, sin imponer ideales o formas de vida considerables <strong>"Ideales o Apropiados"</strong>
+                    
+                        <ul>
+                          <li>Mi nombre es Alan Castañeda Landaverde</li>
+                          <li>Licienciado en Psicológia</li>
+                          <li>Neuropsicológo</li>
+                          <li>Master en neuropsicológia</li> 
+                          <li>Especialista en terapia de pareja</li>
+                          <li>Maestrante en psicoterapia existencial humanista</li> 
+                          </ul>
+                          <p class="wow fadeInRight"  data-duration-in=".3" data-wow-delay="0.3s" style="color:#fff;">  
+                    El enfoque desde el que trabajo fundamentalmente esta dirigido a la colaboración, construcción, reflexión, y comprensión de mi manera de existir, la forma en como se construye 
+                    la relación que tengo conmigo y con el mundo, en la intersubjetividad, lo que más necesitamos es la comprensión de la experiencia.
                     </p>
-                    <button class="btn-rounded btn btn-outline-primary mt-4 wow bounceInUp"  data-duration-in=".3" data-wow-delay="0.3s">Más sobre mi</button>
+                    <!--<button class="btn-rounded btn btn-outline-primary mt-4 wow bounceInUp" data-toggle="collapse" data-target="#aboutme" data-duration-in=".3" data-wow-delay="0.3s">Más sobre mi</button>
+                    <div id="aboutme" class="collapse">
+                      <span style="font-size:20px; color: #695aa6;"></span>
+                      </div>-->
+
+                      <button class="btn-rounded btn btn-outline-primary mt-4 wow bounceInUp" data-toggle="collapse" data-target="#cv" data-duration-in=".3" data-wow-delay="0.3s">Curricúlum</button>
+                    <div id="cv" class="collapse">
+                      <span style="font-size:20px; color: #695aa6;">Cuento con 17 años de experiencia laboral en el ambito publico, adscrito al servicio de la psicológia en el 
+                      hospital general mas importante de la secretaría de salud de Hidalgo, donde atiendo a la población de todas las edades en la consulta externa, area de urgencias y torre 
+                      hospitalaria.
+                    <br>
+                  En el ambito privado tengo 12 años de experiencia ofertando mi trabajo en la ciudad de Pachuca De Soto Hidalgo y Ciudad Shagún Hidalgo, las distintas especialidades en las que me he formado. 
+                  <br>
+                  Colaborador en distintas universidades como maestro de carrera de psicológia.
+                </span>
+                      </div>
                 </div>              
             </div><!-- end of about wrapper -->
         </div><!-- end of container -->
