--- a/blog-2.html
+++ b/blog-2.html
@@ -533,6 +533,12 @@ More info: https://beyondco.de/blog/tailwind-jit-compiler-via-cdn
 
    <!-- End blog section -->
 
+   <div class="wow slideInLeft map-me" style="visibility: visible; animation-name: slideInLeft;">
+    <div id="map">
+    <iframe allowfullscreen="" height="450" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3746.4612832825287!2d-98.7362151!3d20.114794399999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d109e2bb19d0bd%3A0xff81620aa4b1fc5c!2sTiro%20Para%C3%ADso%20123%2C%20Real%20de%20Minas%2C%2042090%20Pachuca%20de%20Soto%2C%20Hgo.!5e0!3m2!1ses-419!2smx!4v1674798539503!5m2!1ses-419!2smx" style="border:0;" width="600"></iframe>
+    </div>
+    </div>
+
     <!-- contact section -->
     <section class="section wow bounceInUp"  data-duration-in=".3" data-wow-delay="0.3s" id="contact">
         <div class="container text-center">
