--- a/blog-1.html
+++ b/blog-1.html
@@ -587,6 +587,12 @@ More info: https://beyondco.de/blog/tailwind-jit-compiler-via-cdn
       <a class='blantershow-chat' href='javascript:void' title='Show Chat'><svg width="20" viewBox="0 0 24 24"><defs/><path fill="#eceff1" d="M20.5 3.4A12.1 12.1 0 0012 0 12 12 0 001.7 17.8L0 24l6.3-1.7c2.8 1.5 5 1.4 5.8 1.5a12 12 0 008.4-20.3z"/><path fill="#4caf50" d="M12 21.8c-3.1 0-5.2-1.6-5.4-1.6l-3.7 1 1-3.7-.3-.4A9.9 9.9 0 012.1 12a10 10 0 0117-7 9.9 9.9 0 01-7 16.9z"/><path fill="#fafafa" d="M17.5 14.3c-.3 0-1.8-.8-2-.9-.7-.2-.5 0-1.7 1.3-.1.2-.3.2-.6.1s-1.3-.5-2.4-1.5a9 9 0 01-1.7-2c-.3-.6.4-.6 1-1.7l-.1-.5-1-2.2c-.2-.6-.4-.5-.6-.5-.6 0-1 0-1.4.3-1.6 1.8-1.2 3.6.2 5.6 2.7 3.5 4.2 4.2 6.8 5 .7.3 1.4.3 1.9.2.6 0 1.7-.7 2-1.4.3-.7.3-1.3.2-1.4-.1-.2-.3-.3-.6-.4z"/></svg> Platica con nosotros</a>
      <!-- end whatsapp chat -->
 
+     <div class="wow slideInLeft map-me" style="visibility: visible; animation-name: slideInLeft;">
+      <div id="map">
+      <iframe allowfullscreen="" height="450" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3746.4612832825287!2d-98.7362151!3d20.114794399999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d109e2bb19d0bd%3A0xff81620aa4b1fc5c!2sTiro%20Para%C3%ADso%20123%2C%20Real%20de%20Minas%2C%2042090%20Pachuca%20de%20Soto%2C%20Hgo.!5e0!3m2!1ses-419!2smx!4v1674798539503!5m2!1ses-419!2smx" style="border:0;" width="600"></iframe>
+      </div>
+      </div>
+
     <!-- footer -->
     <div class="container">
         <footer class="footer">       
