--- a/index.html
+++ b/index.html
@@ -444,10 +444,16 @@ button.slick-prev:hover {
                         <ul>
                           <li>Mi nombre es Alan Castañeda Landaverde</li>
                           <li>Licienciado en Psicológia</li>
-                          <li>Neuropsicológo</li>
                           <li>Master en neuropsicológia</li> 
                           <li>Especialista en terapia de pareja</li>
-                          <li>Maestrante en psicoterapia existencial humanista</li> 
+                          <li>Maestrante en psicoterapia existencial humanista</li>
+                          </ul>
+                          <h2 class="section-title mb-3 wow fadeInUp" data-duration-in=".3" data-wow-delay="0.3s">Mi formación academica</h2>
+                          <ul>
+                            <li>Neuropsicológia Instituto : <span style="font-weight:900; color: #695aa6;">Instituto de posgrado cognitivo conductual</span></li> 
+                          <li>Terapia de pareja <span style="font-weight:900; color: #695aa6;">Instituto mexicano de sexualidad (IMESEX)</span></li>
+                          <li>Terapia existencial <span style="font-weight:900; color: #695aa6;">Universidad humanista de hidalgo</span></li>
+
                           </ul>
                           <p class="wow fadeInRight"  data-duration-in=".3" data-wow-delay="0.3s" style="color:#fff;">  
                     El enfoque desde el que trabajo fundamentalmente esta dirigido a la colaboración, construcción, reflexión, y comprensión de mi manera de existir, la forma en como se construye 
@@ -461,7 +467,7 @@ button.slick-prev:hover {
                       <button class="btn-rounded btn btn-outline-primary mt-4 wow bounceInUp" data-toggle="collapse" data-target="#cv" data-duration-in=".3" data-wow-delay="0.3s">Curricúlum</button>
                     <div id="cv" class="collapse">
                       <span style="font-size:20px; color: #695aa6;">Cuento con 17 años de experiencia laboral en el ambito publico, adscrito al servicio de la psicológia en el 
-                      hospital general mas importante de la secretaría de salud de Hidalgo, donde atiendo a la población de todas las edades en la consulta externa, area de urgencias y torre 
+                      Hospital General de Pachuca el mas importante de la secretaría de salud de Hidalgo, donde atiendo a la población de todas las edades en la consulta externa, area de urgencias y torre 
                       hospitalaria.
                     <br>
                   En el ambito privado tengo 12 años de experiencia ofertando mi trabajo en la ciudad de Pachuca De Soto Hidalgo y Ciudad Shagún Hidalgo, las distintas especialidades en las que me he formado. 
@@ -487,7 +493,7 @@ button.slick-prev:hover {
                   </p>
               </div>
               <div class="col-sm offset-sm-2 offset-md-3">
-                  <button class="btn btn-lg my-font btn-light rounded wow fadeInRight" onclick="location.href='https://wa.me/527712027537'"  data-duration-in=".3" data-wow-delay="0.9s">Pedir información.</button>
+                  <button class="btn btn-lg my-font btn-light rounded wow fadeInRight" onclick="location.href='https://wa.me/527714810713'"  data-duration-in=".3" data-wow-delay="0.9s">Pedir información.</button>
               </div>
           </div> 
       </div> 
